<resources>
    <string name="app_name" translatable="false">FamsPay</string>

    <!-- oauth google PENTING BGT -->
    <string name="default_web_client_id">161524113850-si631j71k543hcfnbkp7tl346l6b2h91.apps.googleusercontent.com</string>

    <!--Onboarding-->
    <string name="onboarding_title_1">Kelola Keuangan Keluarga Lebih Mudah</string>
    <string name="onboarding_title_2">Pencatatan Keuangan Setiap Transaksi</string>
    <string name="onboarding_title_3">Kontrol Anggaran Bulanan</string>
    <string name="onboarding_title_4">Kelola Keuangan Bersama</string>

    <!--Onboarding Desc-->
    <string name="onboarding_desc_1">Catat semua pemasukan dan pengeluaran keluarga dalam satu aplikasi. Semua anggota dapat melihat kondisi keuangan dengan lebih jelas dan terorganisir.</string>
    <string name="onboarding_desc_2">Tambahkan pemasukan atau pengeluaran dengan cepat. Lengkapi dengan kategori dan catatan agar keuangan lebih terorganisir.</string>
    <string name="onboarding_desc_3">Tetapkan batas pengeluaran dan pantau sisa anggaran setiap bulan agar keuangan tetap terkendali.</string>
    <string name="onboarding_desc_4">Bergabung dalam satu keluarga dan kelola keuangan masing-masing dengan lebih transparan dan terstruktur.</string>

    <!-- button di onboarding-->
    <string name="btn_mulai">Mulai \u2192</string>
    <string name="btn_lanjut">Lanjut \u2192</string>

    <!-- layar sebelum login ama register -->
    <string name="auth_title">Selamat datang di FamsPay</string>
    <string name="auth_desc">Kelola keuangan keluarga dengan lebih transparan dan mudah.</string>

    <!-- button di auth -->
    <string name="btn_masuk">Masuk</string>
    <string name="btn_daftar">Daftar</string>

    <!-- layar register -->
    <string name="register_title">Halo, Salam Kenal!~</string>
    <string name="register_title_desc">Yuk, mulai perjalanan keuanganmu dengan FamsPay.</string>
    <string name="register_name">Nama Lengkap</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="btn_register">Daftar</string>
    <string name="or">atau</string>
    <string name="google_sign_in">Lanjutkan dengan Google</string>
    <string name="register_footer_text">Sudah punya akun? Masuk</string>

    <!-- layar login -->
    <string name="login_title">Selamat Datang Kembali!</string>
    <string name="login_email_hint">Masukkan e-mail</string>
    <string name="login_password_hint">Password</string>
    <string name="btn_login">Masuk</string>
    <string name="forgot_password">Forgot the password?</string>

    <!-- lupa password -->
    <string name="forgot_password_title">Reset Password</string>
    <string name="forgot_password_desc">Masukkan email yang terhubung dengan akun Anda dan kami akan mengirim email berisi instruksi untuk mengatur ulang kata sandi Anda.</string>
    <string name="btn_send">Kirim</string>

    <!-- choose fam activity-->
    <string name="choose_family_title">Selamat datang di FamsPay!</string>
    <string name="choose_family_desc">Pilih yang sesuai dengan tujuan Anda</string>
    <string name="btn_create_family">Saya ingin membuat grup Family baru</string>
    <string name="btn_join_family">Saya ingin bergabung ke grup Family</string>

    <!-- create family activity -->
    <string name="create_family_title">Buat Grup Family Baru</string>
    <string name="create_family_desc">Jadilah Admin dan kelola keuangan keluargamu.</string>
    <string name="create_family_input_hint">Nama Keluarga</string>
    <string name="btn_create_family_action">Buat Keluarga</string>

    <!-- join family activity -->
    <string name="join_family_title">Gabung Keluarga</string>
    <string name="join_family_desc">Masukkan Join Code dari Admin keluargamu.</string>
    <string name="join_family_input_hint">Ketik Join Code</string>
    <string name="btn_join_family_action">Gabung</string>
</resources>