<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp"
    android:background="@color/white"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/arrow_back"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/app_name" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="0dp"
            android:layout_height="248dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/register" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/inter"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/register_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottieAnimation" />

        <TextView
            android:id="@+id/tvRegisterDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter"
            android:text="@string/register_title_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etFullName"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="16dp"
            android:hint="@string/register_name"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegisterDesc" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="16dp"
            android:hint="@string/register_email"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etFullName" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:hint="@string/register_password"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textPassword"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="42dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/inter"
            android:text="@string/btn_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPassword" />

        <LinearLayout
            android:id="@+id/llOr"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter"
            android:text="@string/google_sign_in"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llOr"
            app:strokeColor="@color/gray"
            app:strokeWidth="1dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>