<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="24dp"
    android:background="@color/white"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="28dp"
        android:paddingEnd="28dp"
        android:paddingBottom="48dp"
        tools:context=".JoinFamilyActivity">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/app_name"
            android:padding="4dp"
            android:src="@drawable/arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="48dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnBack"
            app:layout_constraintWidth_percent="0.5"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/joinfamily" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/join_family_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lottieAnimation" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:text="@string/join_family_desc"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <EditText
            android:id="@+id/etJoinCode"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/bg_input_field"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="16dp"
            android:hint="@string/join_family_input_hint"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:fontFamily="@font/inter"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        <Button
            android:id="@+id/btnJoinFamily"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/inter"
            android:text="@string/btn_join_family_action"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:backgroundTint="@color/green"
            app:cornerRadius="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etJoinCode" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
